# hpgl-reborn

./: .gitignore  CMakeLists.txt  CMakePresets.json  MANIFEST.in  build.bat  pyproject.toml  readme.md
cmake/: README.md
docs/: VALIDATION_FRAMEWORK.md
legacy_documentation/hpgl.sourceforge.net/: index.html  index_ru.html  license.txt  license_ru.txt  solved_problems.html
sample-scripts/: CUBE.INC  SAVE.INC  SAVE_CUB.INC  calc_mean.py  gaussian_cdf.py  getconcub.py  gsr_calc.py  gtsim.py  gtsim_test.py  gtsimk.py  gtsimk_const_prob.py  gtsimk_test.py  gtsimk_test1.py  hpgl_prop_functions.py  mean_calc_hist.py  ntg_calc_hist.py  python_property.py  show_map.py  sk_test.py  stat.py  test_gtsimk.py  test_gtsimk1.py  test_prop2array.py
solved_problems_book/2.3. Standartization and Probability Intervals/: problem_2.3.py  samples.txt
solved_problems_book/2.3. Standartization and Probability Intervals/Result/: problem_2.3.txt
solved_problems_book/2.3.Standartization and Probability Intervals/: problem_2.3.py
solved_problems_book/3.1. Basic Declustering/: dataset.txt  problem_3.1.py
solved_problems_book/3.3.Comparison of Declustering Methods/: decluster.py  decluster.txt  decluster_without_polygonal.py  problem_3.3.py  problem_without_polygonal.py
solved_problems_book/4.1. Central limit theorem/: problem_4.1.py
solved_problems_book/4.1. Central limit theorem/Result/: problem_4.1.txt
solved_problems_book/4.2. Bootstrap and Spatial Bootstrap/: 1_cell_declusterisation.py  2_bootstrap.py  3_spatial_bootstrap.py
solved_problems_book/4.2. Bootstrap and Spatial Bootstrap/Result/1/: 1_cell_declusterisation.txt
solved_problems_book/4.2. Bootstrap and Spatial Bootstrap/Result/2/: 2_bootstrap.txt
solved_problems_book/4.2.Bootstrap and Spatial Bootstrap/: 1_cell_declusterisation.py  2_bootstrap.py
solved_problems_book/4.3. Transfer of Uncertainty/: 1_npv.py  2_corr_npv.py
solved_problems_book/4.3. Transfer of Uncertainty/Result/1/: 1_npv.txt
solved_problems_book/4.3. Transfer of Uncertainty/Result/2/: 2_corr_npv.txt
solved_problems_book/5.2. Variogram Calculation/: 1_2d_variogram.py  1_3d_variogram.py  3welldata.txt  allwelldata.txt
solved_problems_book/5.2. Variogram Calculation/Result/2d/: 1_2d_variogram.txt
solved_problems_book/5.3. Variogram Modeling and Volume Variance/: 3d_variogram.py  gammabar.py  test.py
solved_problems_book/5.3. Variogram Modeling and Volume Variance/Result/: 3d_variogram.txt
solved_problems_book/7.2. Conditioning by Kriging/: problem_7_2.py  transect.txt
solved_problems_book/7.2. Conditioning by Kriging/Result/: problem_7.2.txt
solved_problems_book/7.3. Gaussian Simulation/: 1_SK.py  2_var.py  DBHdata.txt
solved_problems_book/7.3. Gaussian Simulation/Result/2/: 2_var.txt
solved_problems_book/8.3. Indicator Simulation for Categorical Data/: cdf_pdf.py
solved_problems_book/Examples test_compare/: BIG_SOFT_DATA_160_141_20.INC  IND_data.INC  indicator_kriging.py  make_prop.py  sis.py
solved_problems_book/shared/: decl_grid.py  gaussian_cdf.py  geo_routines.py  grid_3d.py  gslib.py  opt_x_y.py  statistics.py  variogram_routines.py
src/: SConstruct  hpgl.sln
src/bs_gstl/include/: bs_random_generator.h  hpgl_exception.h  lvm_data.h  path_random_generator.h  property_array.h  random_node_enumerator.h  sequential_simulation.h  sugarbox_grid.h  typedefs.h  validation.h
src/bs_gstl/src/: bs_assert.h  bs_property_array.cpp  bs_random_generator.cpp  clusterizer.cpp  cont_kriging.h  covariance_param.cpp  gauss_solver.cpp  hpgl_exception.cpp  ik_params.cpp  lvm_data.cpp  map_categories.h  median_ik.cpp  neighbourhood_param.cpp  non_parametric_cdf.h  property_writer.cpp  random_node_enumerator.cpp  read_inc_file.cpp  sequential_gaussian_simulation.cpp  sequential_indicator_simulation.cpp  simple_cokriging_markI.cpp  stdafx.h  sugarbox_indexed_neighbour_lookup.h  sugarbox_neighbour_lookup.h  sugarbox_neighbour_lookup_distance.h  validation.cpp
src/geo_bsd/: __init__.py  cdf.py  cvariogram.py  geo.py  gtsim.py  hpgl_wrap.py  routines.py  sgs.py  sis.py  validation.py  variogram.py
src/geo_bsd/_cvariogram/: variograms.cpp
src/geo_bsd/hpgl/: api.cpp  api.h  api_helpers.cpp  api_helpers.hpp  bs_assert.cpp  bs_assert.h  bs_random_generator.cpp  bs_random_generator.h  buffer_accessor_3d.h  cdf_utils.cpp  clusterizer.cpp  clusterizer.h  combiner.h  cont_kriging.h  cov_model.h  gauss_solver.cpp  gaussian_distribution.h  hpgl_core.h  hpgl_exception.cpp  hpgl_exception.h  indicator_kriging.h  kriging_interpolation.h  lapack_compat.h  load_property_from_file.cpp  lvm_kriging.cpp  map_categories.h  mean_provider.cpp  median_ik.cpp  my_kriging_weights.h  non_parametric_cdf.h  ordinary_kriging.cpp  output.cpp  output.h  path_random_generator.h  precalculated_covariance.h  pretty_printer.cpp  pretty_printer.h  property_array.h  property_writer.cpp  random_node_enumerator.cpp  (+17 more)
src/hpgl.pyd/: extract_indicator_values.cpp  extract_indicator_values.h  extract_lvm_data.cpp  extract_lvm_data.h  generate_complement_array.cpp  generate_complement_array.h  module.cpp  numpy_utils.h  py_calc_vpc.cpp  py_co_kriging.cpp  py_grid.cpp  py_indicator_kriging.cpp  py_kriging_weights.h  py_load_property.cpp  py_load_property.h  py_lvm_data.cpp  py_lvm_data.h  py_mean_data.h  py_median_ik.h  py_parse_sis_params.cpp  py_parse_sis_params.h  py_property_array.h  py_read_inc_file.cpp  py_sgs_params.cpp  py_sis.cpp  py_sis.h  stdafx.h
src/msvc/: build_release_x64.bat  cvariogram.vcxproj  cvariogram.vcxproj.filters  hpgl-gpl.vcxproj  hpgl-gpl.vcxproj.filters  hpgl.vcxproj  python_pkg.vcxproj
tests/: CMakeLists.txt  README.md  run_tests.py  validate_environment.py
tests/python/: conftest.py  test_classes.py  test_edge_cases.py  test_integration.py  test_kriging.py  test_kriging_complete.py  test_legacy_migrated.py  test_memory_leaks.py  test_numpy2_compat.py  test_performance.py  test_simulation.py  test_simulation_complete.py  test_utilities.py
tests/python/test_data/: BIG_SOFT_DATA_160_141_20.INC  BIG_SOFT_DATA_CON_160_141_20.INC  NEW_TEST_PROP_01.INC
(+2 files in other folders)
